infra/k8s/auth-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: 'bitnami/mongodb:4.4'
          ports:
           - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
