infra/k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      restartPolicy: Always
      containers:
      - name: client
        image: trinhno/client
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
